--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -43,78 +43,80 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/">
+                android:id="@+id/dayLabels">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Sunday"
-                    android:id="@+id/textView"
+                    android:id="@+id/labelSunday"
                     android:layout_column="1"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:labelFor="@id/checkBox_Sunday"/>
+                    android:labelFor="@+id/checkBox_Sunday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Monday"
-                    android:id="@+id/textView2"
+                    android:id="@+id/labelMonday"
                     android:layout_column="2"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:labelFor="@id/checkBox_Monday"/>
+                    android:labelFor="@+id/checkBox_Monday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Tuesday"
-                    android:id="@+id/textView3"
+                    android:id="@+id/labelTuesday"
                     android:layout_column="3"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:labelFor="@id/checkBox_Tuesday"/>
+                    android:labelFor="@+id/checkBox_Tuesday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Wednesday"
-                    android:id="@+id/textView4"
+                    android:id="@+id/labelWednesday"
                     android:layout_column="4"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:labelFor="@id/checkBox_Wednesday"/>
+                    android:labelFor="@+id/checkBox_Wednesday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Thursday"
-                    android:id="@+id/textView5"
+                    android:id="@+id/labelThursday"
                     android:layout_column="5"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:labelFor="@id/checkBox_Thursday"/>
+                    android:labelFor="@+id/checkBox_Thursday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Friday"
-                    android:id="@+id/textView6"
+                    android:id="@+id/labelFriday"
                     android:layout_column="6"
                     android:layout_gravity="bottom|center_horizontal"
                     android:textAlignment="gravity"
-                    android:labelFor="@id/checkBox_Friday"/>
+                    android:labelFor="@+id/checkBox_Friday"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/checkBox_Sunday"
-                    android:id="@+id/textView7"
+                    android:id="@+id/labelSaturday"
                     android:layout_column="7"
                     android:textAlignment="gravity"
-                    android:layout_gravity="bottom|center_horizontal"/>
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:labelFor="@+id/checkBox_Saturday"/>
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:baselineAligned="false"
+                android:id="@+id/dayCheckboxes">
 
 
                 <CheckBox
