--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,19 +20,18 @@
         android:background="@color/primary"/>
 
     <android.support.design.widget.FloatingActionButton
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/actionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_add_alert_white_48dp"
-        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_add_alert_white_48dp"
         app:elevation="@dimen/fab_button_elevation"
-        android:cropToPadding="false"
-        android:focusable="false"/>
+        app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
+        app:borderWidth="0dp"
+        app:rippleColor="@color/colorPrimaryLight"/>
 
     <ListView
         android:layout_width="wrap_content"
