--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,8 @@
         <item name="android:popupBackground">@color/white</item>
     </style>
 
+    <style name="AppTheme.FloatingActionButton" parent="Widget.AppCompat.ActionButton">
+
+    </style>
+
 </resources>
